# ADIRO

./: .gitignore  README.md  aec_common_symbols.ttl  aec_domain_common.ttl  aec_drawing_metadata.ttl  aec_drawing_ontology.ttl  aec_drawing_ontology_v01.ttl  aec_facade_domain.ttl  pyproject.toml
.cursor/rules/: description.mdc  general.mdc
.github/workflows/: backup-version.yml  deploy-docs.yml  generate-deploy-docs.yml  validate-ontology.yml
docs/: aec_common_symbols.html  aec_common_symbols.ttl  aec_core.html  aec_core.ttl  aec_domain_common.html  aec_domain_common.html.display.json  aec_domain_common.ttl  aec_drawing_metadata.display.json  aec_drawing_metadata.html  aec_drawing_metadata.html.display.json  aec_drawing_metadata.ttl  aec_drawing_ontology.display.json  aec_drawing_ontology.html  aec_drawing_ontology_v01.html  aec_drawing_ontology_v01.ttl  aec_facade_domain.display.json  aec_facade_domain.html  aec_facade_domain.ttl  index.html
docs/brainstorming/: ontology_modeling-object_properties.md
docs/governance/: compatibility-diff-algorithm-spec.md  compatibility-report.schema.json
docs/modularization/: MODULARIZATION_SUMMARY.md  ontology-modularization-todo.md
docs/uc-orsd/uc01/: Ontology Requirements Specification - Use Case 1.md  (+1 more)
scripts/: generate_docs.py  validate_ontology.py
src/: aec_common_symbols.display.json  aec_common_symbols.ttl  aec_domain_common.ttl  aec_drawing_metadata.display.json  aec_drawing_metadata.ttl  aec_drawing_ontology.display.json  aec_drawing_ontology.ttl  aec_facade_domain.ttl
versions/: README.md
(+4 files in other folders)
