[project]
name = "aec-drawing-ontology"
version = "0.1.0"
description = "AEC Drawing Ontology with automated documentation generation"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pylode==3.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "scripts",
    "docs",
    "img",
    "*.ttl",
    "*.json",
    "*.display.json",
    "README.md",
    "LICENSE",
]
